2014-09-16  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* hotspot.map: Moved to...
	* Makefile.am:
	(ICEDTEA_URL): Include release in path to match
	release branches.
	* NEWS: Updated.
	* acinclude.m4:
	(IT_DETERMINE_VERSION): Obtain branch and release
	version automatically from package version.
	* configure.ac: Call IT_DETERMINE_VERSION and
	generate hotspot.map. Add a trailing zero to the
	first release (2.6.0 instead of 2.6).
	* hotspot.map.in: ... here so the URL can be
	generated using the release version.

2014-09-12  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* Makefile.am,
	(CORBA_CHANGESET): Update to icedtea-2.6pre08.
	(JAXP_CHANGESET): Likewise.
	(JAXWS_CHANGESET): Likewise.
	(JDK_CHANGESET): Likewise.
	(LANGTOOLS_CHANGESET): Likewise.
	(OPENJDK_CHANGESET): Likewise.
	(CORBA_SHA256SUM): Likewise.
	(JAXP_SHA256SUM): Likewise.
	(JAXWS_SHA256SUM): Likewise.
	(JDK_SHA256SUM): Likewise.
	(LANGTOOLS_SHA256SUM): Likewise.
	(OPENJDK_SHA256SUM): Likewise.
	* NEWS: Updated.
	* configure.ac: Bump to 2.6pre08.
	* hotspot.map: Update to icedtea-2.6pre08.

2014-09-03  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* NEWS: Add 2.5.2 release notes.

2014-08-29  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* NEWS: Update OpenJDK bug URL.

2014-08-27  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* Makefile.am,
	(BUILD_VERSION): Set to b02.
	(CORBA_CHANGESET): Update to icedtea-2.6pre07.
	(JAXP_CHANGESET): Likewise.
	(JAXWS_CHANGESET): Likewise.
	(JDK_CHANGESET): Likewise.
	(LANGTOOLS_CHANGESET): Likewise.
	(OPENJDK_CHANGESET): Likewise.
	(CORBA_SHA256SUM): Likewise.
	(JAXP_SHA256SUM): Likewise.
	(JAXWS_SHA256SUM): Likewise.
	(JDK_SHA256SUM): Likewise.
	(LANGTOOLS_SHA256SUM): Likewise.
	(OPENJDK_SHA256SUM): Likewise.
	* NEWS: Updated. Cleanup duplicates.
	* configure.ac: Bump to 2.6pre07.
	* hotspot.map: Update to icedtea-2.6pre07.
	* patches/boot/ecj-diamond.patch:
	Regenerated. Add new case in OutputStreamHook.