@@ -201,6 +201,7 @@ New in release 2.6.0 (2014-XX-XX):
   - PR1989: Make jdk_generic_profile.sh handle missing programs better and be more verbose
   - PR1992, RH735336: Support retrieving proxy settings on GNOME 3.12.2
   - PR2000: Synchronise HEAD tarball paths with release branch paths
+  - PR2002: Fix references to hotspot.map following PR2000
 
 New in release 2.5.2 (2014-08-29):
 
